--- a/server/package.json
+++ b/server/package.json
@@ -19,13 +19,14 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
+    "sanitize-filename": "^1.6.3",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1"
   }
