--- a/socketServer/package.json
+++ b/socketServer/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "nunjucks": "^3.2.4",
     "socket.io": "^4.7.2"
   }
