--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
