--- a/socketServer/package.json
+++ b/socketServer/package.json
@@ -7,6 +7,7 @@
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.2",
     "nunjucks": "^3.2.4",
     "socket.io": "^4.7.2"
   }
