refactor: API 서버 / sequlize 관련 코드 삭제
 - models 디렉토리, config 디렉토리 등 삭제

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # sequelize <--> DB 연결정보 
 
-!server/config/.gitkeep
-server/config/config.json
+# !server/config/.gitkeep
+# server/config/config.json
 
 .env
 node_modules/
