--- a/socketServer/package.json
+++ b/socketServer/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
