--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "passport-local": "^1.0.0",
     "sanitize-filename": "^1.6.3",
     "sequelize": "^6.33.0",
-    "sequelize-cli": "^6.6.1"
+    "sequelize-cli": "^6.6.1",
+    "socket.io": "^4.7.2"
   }
 }
