--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "node-cache": "^5.1.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
